--- a/api/build.gradle
+++ b/api/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 	compile('io.springfox:springfox-swagger2:2.6.0')
 	compile('io.springfox:springfox-swagger-ui:2.6.0')
 
+	compile("org.springframework.boot:spring-boot-devtools")
+
 	runtime('com.h2database:h2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
